// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConfigTestCases records issue-2991 exported tests should write relative paths to records 1`] = `
"{
  \\"chunks\\": {
    \\"byName\\": {
      \\"main\\": 404
    },
    \\"bySource\\": {
    },
    \\"usedIds\\": [
      404
    ]
  },
  \\"modules\\": {
    \\"byIdentifier\\": {
      \\"./test.js\\": 316,
      \\"external \\\\\\"fs\\\\\\"\\": 66,
      \\"external \\\\\\"path\\\\\\"\\": 589,
      \\"ignored|pkgs/somepackage/foo\\": 557
    },
    \\"usedIds\\": [
      66,
      316,
      557,
      589
    ]
  }
}"
`;

exports[`ConfigTestCases records issue-7339 exported tests should write relative dynamic-require paths to records 1`] = `
"{
  \\"chunks\\": {
    \\"byName\\": {
      \\"main\\": 404
    },
    \\"bySource\\": {
    },
    \\"usedIds\\": [
      404
    ]
  },
  \\"modules\\": {
    \\"byIdentifier\\": {
      \\"./dependencies/bar.js\\": 853,
      \\"./dependencies/foo.js\\": 494,
      \\"./dependencies|sync|/^\\\\\\\\.\\\\\\\\/.*$/\\": 890,
      \\"./test.js\\": 316,
      \\"external \\\\\\"fs\\\\\\"\\": 66,
      \\"external \\\\\\"path\\\\\\"\\": 589
    },
    \\"usedIds\\": [
      66,
      316,
      494,
      589,
      853,
      890
    ]
  }
}"
`;
